# lazyollama

./: Cargo.toml  LICENSE  README.md  install.sh
src/: app.rs  error.rs  events.rs  handlers.rs  main.rs  ollama_api.rs  registry_api.rs  tasks.rs  tui.rs  ui.rs
