[package]
name = "lazyollama"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.26.1", features = ["crossterm"] }
crossterm = "0.27.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
humansize = "2.1"
