[package]
name = "lazyollama"
version = "0.2.0"
edition = "2024"
authors = ["Mathias Karstädt <mathias.karstaedt@gmail.com>"]
description = "A Rust CLI tool for interacting with large language models"
readme = "README.md"
repository = "https://github.com/webmatze/lazyollama"
license = "MIT"
keywords = ["cli", "llm", "ai", "text-generation"]
categories = ["command-line-utilities", "text-processing"]

[package.metadata.install]
path = "/usr/local/bin"
[dependencies]
ratatui = { version = "0.26.1", features = ["crossterm"] }
crossterm = "0.27.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
humansize = "2.1"
scraper = "0.19.0"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "lazyollama"
path = "src/main.rs"
